<resources>
    <string name="app_name">socket_client_messenger</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Bottom menu -->
    <string name="bottom_news">News</string>
    <string name="bottom_chat">Chat</string>
    <!-- Chat Fragment -->
    <string name="chat_button">Send Now</string>
    <string name="edit_button">Edit</string>
    <string name="chat_hint">Message</string>
    <string name="chat_error">Empty !</string>
    <string name="profile">Profile</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="go_back">Go Back</string>
    <string name="open_chat">Open chat</string>
    <string name="users">Users</string>
</resources>